fix test of the project

--- a/env.example
+++ b/env.example
@@ -3,3 +3,6 @@ DATABASE_USERNAME='xxxxxxxxx'
 DATABASE_PASSWORD='xxxxxxxxx'
 DATABASE_PORT= xxxx
 DATABASE_NAME='xxxxxxxxxxxxx'
+
+CREDIT_CARD_URL='xxxxxxxxxxx'
+CREDIT_CARD_PORT='xxxxxxxxxx'
