--- a/env.example
+++ b/env.example
@@ -6,3 +6,6 @@ DATABASE_NAME='xxxxxxxxxxxxx'
 
 CREDIT_CARD_URL='xxxxxxxxxxx'
 CREDIT_CARD_PORT='xxxxxxxxxx'
+
+CAMPAIGN_SERVICE_HOST='xxxxxx'
+CAMPAIGN_SERVICE_PORT='xxxxx'
