connect supplier service and product service

--- a/env.example
+++ b/env.example
@@ -9,3 +9,9 @@ CREDIT_CARD_PORT='xxxxxxxxxx'
 
 CAMPAIGN_SERVICE_HOST='xxxxxx'
 CAMPAIGN_SERVICE_PORT='xxxxx'
+
+SUPPLIER_SERVICE_URL='xxxxxx'
+SUPPLIER_SERVICE_PORT='xxxxx'
+
+PRODUCT_SERVICE_URL='xxxxxxx'
+PRODUCT_SERVICE_PORT='xxxxxx'
